[gd_scene load_steps=28 format=3 uid="uid://c6fiic2gbpokq"]

[ext_resource type="Theme" uid="uid://rlx03g7wychq" path="res://content/common_theme.tres" id="1_gsidl"]
[ext_resource type="Script" uid="uid://bownoylunbvwi" path="res://content/main/main.gd" id="1_yqvsc"]
[ext_resource type="Texture2D" uid="uid://dfgj1n72o3q0y" path="res://resources/images/logo_super_earth.svg" id="3_k03jb"]
[ext_resource type="FontFile" uid="uid://ddjmjwoqek0tx" path="res://resources/fonts/FS Sinclair Bold.woff2" id="4_gamge"]
[ext_resource type="Script" uid="uid://d2nfww1hs7kbs" path="res://content/main/super_earth_background.gd" id="4_jsaoi"]
[ext_resource type="AudioStream" uid="uid://c680q3enjc1h4" path="res://resources/sounds/menu_click_0.wav" id="5_ekokd"]
[ext_resource type="Script" uid="uid://ba34x6vwd0hn6" path="res://content/main/title.gd" id="5_ypqn1"]
[ext_resource type="AudioStream" uid="uid://bgy6gfi8qxiv4" path="res://resources/sounds/press_0.wav" id="6_gsidl"]
[ext_resource type="Script" uid="uid://clc5avsj2hw4l" path="res://content/main/title_tip_text.gd" id="6_lcvle"]
[ext_resource type="AudioStream" uid="uid://c0oc0t1tgmrvm" path="res://resources/sounds/music_1.wav" id="6_ps72s"]
[ext_resource type="Script" uid="uid://disf6hafk38y6" path="res://content/main/title_line_top.gd" id="7_61xpx"]
[ext_resource type="AudioStream" uid="uid://c6httunocy126" path="res://resources/sounds/ready_0.wav" id="7_628aj"]
[ext_resource type="AudioStream" uid="uid://ntt6tl85kjt2" path="res://resources/sounds/press_1.wav" id="7_toben"]
[ext_resource type="Script" uid="uid://bkg3pabww2y5q" path="res://content/main/title_line_bottom.gd" id="8_4r3nh"]
[ext_resource type="AudioStream" uid="uid://cu5nyxjhwwwi0" path="res://resources/sounds/press_2.wav" id="8_5gw5y"]
[ext_resource type="AudioStream" uid="uid://dg2wgvoh3w04x" path="res://resources/sounds/press_3.wav" id="9_r3puh"]
[ext_resource type="AudioStream" uid="uid://blayh1i2c61ui" path="res://resources/sounds/start_0.wav" id="10_toben"]
[ext_resource type="AudioStream" uid="uid://b2ik0q8ghar17" path="res://resources/sounds/music_0.wav" id="11_5gw5y"]
[ext_resource type="Script" uid="uid://bhkeqicc0u8e6" path="res://content/main/main_menu_text.gd" id="12_81m4s"]
[ext_resource type="AudioStream" uid="uid://odvpmtbcq6hh" path="res://resources/sounds/gameover_0.wav" id="12_ju0h2"]
[ext_resource type="AudioStream" uid="uid://bgsmk11y80esa" path="res://resources/sounds/gameover_1.wav" id="13_6tfuj"]
[ext_resource type="PackedScene" uid="uid://dmm7sji51u4gi" path="res://content/classic_game/classic_game.tscn" id="18_toben"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_628aj"]
fade_time = 0.0
stream_count = 1
stream_0 = ExtResource("6_ps72s")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ju0h2"]
streams_count = 4
stream_0/stream = ExtResource("6_gsidl")
stream_1/stream = ExtResource("7_toben")
stream_2/stream = ExtResource("8_5gw5y")
stream_3/stream = ExtResource("9_r3puh")

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_r3puh"]
fade_time = 0.0
stream_count = 1
stream_0 = ExtResource("11_5gw5y")

[sub_resource type="LabelSettings" id="LabelSettings_61xpx"]
font = ExtResource("4_gamge")
font_size = 92

[sub_resource type="LabelSettings" id="LabelSettings_4r3nh"]
font_size = 48
font_color = Color(1, 1, 0, 1)

[node name="Main" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_gsidl")
color = Color(0, 0, 0, 1)
script = ExtResource("1_yqvsc")

[node name="Audio_TitleMusic" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_628aj")

[node name="Audio_Ready" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_628aj")

[node name="Audio_MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ekokd")

[node name="Audio_Press" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ju0h2")
max_polyphony = 4

[node name="Audio_Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_toben")

[node name="Audio_PlayingMusic" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_r3puh")

[node name="Audio_GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ju0h2")

[node name="Audio_GameOverLarge" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_6tfuj")

[node name="SuperEarthBackground" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.1882353)
layout_mode = 0
offset_left = 160.0
offset_top = 90.0
offset_right = 1440.0
offset_bottom = 810.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_k03jb")
expand_mode = 1
stretch_mode = 5
script = ExtResource("4_jsaoi")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_top = -57.6
offset_right = 1280.0
offset_bottom = 662.4
text = "title"
label_settings = SubResource("LabelSettings_61xpx")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_ypqn1")

[node name="TitleTipText" type="Label" parent="."]
layout_mode = 0
offset_top = 90.0
offset_right = 1280.0
offset_bottom = 810.0
text = "title_tip"
label_settings = SubResource("LabelSettings_4r3nh")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_lcvle")

[node name="TitleLineTop" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 56.0
offset_right = 1280.0
offset_bottom = 72.0
script = ExtResource("7_61xpx")

[node name="TitleLineBottom" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 648.0
offset_right = 1280.0
offset_bottom = 664.0
script = ExtResource("8_4r3nh")

[node name="MainMenu_Text" type="RichTextLabel" parent="."]
auto_translate_mode = 2
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 72
bbcode_enabled = true
text = "[b]test[/b]test"
scroll_active = false
autowrap_mode = 0
autowrap_trim_flags = 0
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 0
script = ExtResource("12_81m4s")

[node name="ClassicGame" parent="." instance=ExtResource("18_toben")]
layout_mode = 0
